--- a/index.html
+++ b/index.html
@@ -95,14 +95,39 @@
     <div id="mapDiv">
       <h2>Where I've Lived and Worked</h2>
     </div>
+    <div id="contact">
+          <h2>Contact Me</h2>
+          <form action="#">
+            <ul>
+              <li>
+                <label for="name">Name: </label>
+                <input name="name" id="name">
+              </li>
+
+              <li>
+                <label for="email">Email Address: </label>
+                <input name="email" id="email">
+              </li>
+
+              <li>
+                <label for="comments">What's Up?</label>
+                <textarea name="comments" id="comments" cols="30" rows="10"></textarea>
+              </li>
+              <li>
+                <input type="submit" value="Submit">
+              </li>
+            </ul>
+          </form>
+        </div>
     <div id="letsConnect" class='dark-gray'>
       <h2 class='white center-text'><a href="http://www.linkedin.com/pub/junyi-xiao/51/754/559" class="m" role="button">Let's Connect</a></h2>
-      <ul id="footerContacts" class="flex-box">
+      <ul id="footerContacts" class="flex-box"> 
       </ul>
     </div>
   </div>
   
   <script src="js/resumeBuilder.js"></script>
+  <script src="js/contact.js"></script>
 
 
 <!--  <script type="text/javascript">
