--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </ul>
           </form>
         </div>
-    <div id="letsConnect" class='dark-gray'>
+    <div id="letsConnect">
       <h2 class='white center-text'><a href="http://www.linkedin.com/pub/junyi-xiao/51/754/559" class="m" role="button">Let's Connect</a></h2>
       <ul id="footerContacts" class="flex-box"> 
       </ul>
